fix(Project pages): fixed section height on ios safari devices

--- a/styles/components/project-details.scss
+++ b/styles/components/project-details.scss
@@ -1,5 +1,5 @@
 section.project-details {
-	height: 100vh;
+	height: 100svh;
 
 	display: flex;
 	flex-direction: column;
@@ -12,8 +12,8 @@ section.project-details {
 		top: 0;
 		left: 0;
 
-		width: 100vw;
-		height: 100vh;
+		width: 100svw;
+		height: 100svh;
 
 		overflow: hidden;
 
@@ -25,8 +25,8 @@ section.project-details {
 		}
 		div {
 			position: absolute;
-			width: 100vw;
-			height: 100vh;
+			width: 100svw;
+			height: 100svh;
 			background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.65));
 			top: 0;
 			left: 0;
